# embodied_intelligence_paper

./: .gitignore  README.md  ReadMe.md  pyproject.toml
.github/workflows/: daily_update.yml
categories/2020/: embodied_agents.md  foundation_models.md  hri.md  manipulation.md  navigation.md  other.md  sim2real.md  vla.md
categories/2021/: embodied_agents.md  foundation_models.md  hri.md  manipulation.md  navigation.md  other.md  sim2real.md  vla.md
categories/2022/: embodied_agents.md  foundation_models.md  hri.md  manipulation.md  navigation.md  other.md  sim2real.md  vla.md
categories/2023/: embodied_agents.md  foundation_models.md  hri.md  manipulation.md  navigation.md  other.md  sim2real.md  vla.md
categories/2024/: embodied_agents.md  foundation_models.md  hri.md  manipulation.md  navigation.md  other.md  sim2real.md  vla.md
categories/2025/: embodied_agents.md  foundation_models.md  hri.md  manipulation.md  navigation.md  other.md  sim2real.md  vla.md
categories/2026/: embodied_agents.md  foundation_models.md  hri.md  manipulation.md  navigation.md  other.md  sim2real.md  vla.md
data/: papers.json
examples/: README.example.md  category_manipulation_2026.example.md
scripts/: categorize.py  fetch_arxiv.py  generate_categories.py  generate_readme.py  run_daily.py  update_database.py
src/ei_paper_index/: __init__.py  arxiv_client.py  config.py  models.py  pipeline.py  processor.py  renderer.py
src/embodied_intelligence_paper_index.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_processor.py
(+4 files in other folders)
