[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodied-intelligence-paper-index"
version = "0.1.0"
description = "Automated arXiv paper indexing for embodied intelligence"
readme = "ReadMe.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
