[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodied-intelligence-paper-tracker"
version = "0.2.0"
description = "Daily embodied intelligence paper tracker from arXiv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "feedparser>=6.0.11",
  "beautifulsoup4>=4.12.0",
  "pandas>=2.2.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
